--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 		</div>
 		<div id="content">
 			<div id="feature">
-				<p>Feature</p>
+				<p>Feature
+					
+<h1>Welcome to my website, here I will describe myself as well as what classes I take, and my interests</h1>
+				</p>
 			</div>
 			<div class="article column1">
 				<p>Column One</p>
