--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		<title>Liquid Layout</title>
 		<style type="text/css">
 			* {
+				
 				font-family: Arial, Verdana, sans-serif;
 				color: #665544;
 				text-align: center;}
 			body {
+				background-image: url(https://th.bing.com/th/id/R.79ac445e0ef8e51b222a591ae60e0197?rik=SEmPv8YYeD9v1g&riu=http%3a%2f%2fwww.wallpapers13.com%2fwp-content%2fuploads%2f2016%2f01%2fBackground-Landscape-Lake-shore-stones-wood-Sunset-1920x1440.jpg&ehk=k15gMcYImQhM4IPPJCQdb2KCXoPCGgXgIiqZXIVOJGw%3d&risl=&pid=ImgRaw&r=0);
 				width: 90%;
 				margin: 0 auto;}
 			#content {
