--- a/index.html
+++ b/index.html
@@ -36,15 +36,23 @@
 		</style>
 	</head>
 	<body>
+		<form action="name-of-your-thanky ou-page.html" method="get"
+name="myContact">
+
+...
+
+</form>
 		<div id="header">
 			<h1>Logo</h1>
 			<div id="nav">
 				<ul>
 					<li><a href="">Home</a></li>
-					<li><a href="">Products</a></li>
-					<li><a href="">Services</a></li>
-					<li><a href="/Artifacts.html">About</a></li>
+					<li><a href="">Me</a></li>
+					<li><a href="">Classes</a></li>
+					<li><a href="/Artifacts.html">Artifacts</a></li>
+					<li><a href="">modules</a></li>
 					<li><a href="">Contact</a></li>
+					<li><a href="">Intrests</a></li>
 				</ul>
 			</div>
 		</div>
