--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 			<h1>Logo</h1>
 			<div id="nav">
 				<ul>
-					<li><a href="">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="">Me</a></li>
 					<li><a href="">Classes</a></li>
-					<li><a href="/Artifacts.html">Artifacts</a></li>
+					<li><a href="Artifacts.html">Artifacts</a></li>
 					<li><a href="">modules</a></li>
 					<li><a href="">Contact</a></li>
 					<li><a href="">Intrests</a></li>
@@ -55,7 +55,7 @@
 			<div id="feature">
 				<p>Feature
 					
-<h2>Welcome to my website, here I will describe myself as well as what classes I take, and my interests</h2>
+<h2>Welcome to my website, here I will describe myself as well as what classes I take, and my interests.</h2>
 				</p>
 			</div>
 			<div class="article column1">
