--- a/Artifacts.html
+++ b/Artifacts.html
@@ -35,15 +35,18 @@
 		</style>
 	</head>
 	<body>
+		
 		<div id="header">
 			<h1>Logo</h1>
 			<div id="nav">
 				<ul>
-					<li><a href="">Home</a></li>
-					<li><a href="">Products</a></li>
-					<li><a href="">Services</a></li>
-					<li><a href="">About</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="">Me</a></li>
+					<li><a href="">Classes</a></li>
+					<li><a href="Artifacts.html">Artifacts</a></li>
+					<li><a href="">modules</a></li>
 					<li><a href="">Contact</a></li>
+					<li><a href="">Intrests</a></li>
 				</ul>
 			</div>
 		</div>
@@ -51,18 +54,21 @@
 			<div id="feature">
 				<p>Feature
 					
-<h2>About me page (different!/0</h2>
+<h2>Here I will list my Artifacts i have worked on in the past.</h2>
 				</p>
 			</div>
 			<div class="article column1">
-				<p>Column One</p>
+				<p><a href="https://damionyow.github.io/resume.github.io/">Artifact 1 (resume)</a></p>
 			</div>
 			<div class="article column2">
-				<p>Column Two</p>
+				<p><a href="https://damionyow.github.io/Chess/">Artifact 2 (Chessboard)</a></p>
 			</div>
 			<div class="article column3">
-				<p>Column Three</p>
+				<p>Coming Soon!</p>
 			</div>
 		</div>
 		<div id="footer">
 			<p>&copy; Copyright 2011</p>
+		</div>
+	</body>
+</html>
