--- a/Artifacts.html
+++ b/Artifacts.html
@@ -37,7 +37,7 @@
 	<body>
 		
 		<div id="header">
-			<h1>Logo</h1>
+			<h1>Artifacts</h1>
 			<div id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
