--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<body>
 		
 		<div id="header">
-			<h1>Logo</h1>
+			<h1>HOME</h1>
 			<div id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
