--- a/Artifacts.html
+++ b/Artifacts.html
@@ -41,12 +41,12 @@
 			<div id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="">Me</a></li>
-					<li><a href="">Classes</a></li>
+					<li><a href="About.html">About</a></li>
+					<li><a href="coursework.html">Classes</a></li>
 					<li><a href="Artifacts.html">Artifacts</a></li>
-					<li><a href="">modules</a></li>
-					<li><a href="">Contact</a></li>
-					<li><a href="">Intrests</a></li>
+					<li><a href="Module.html">modules</a></li>
+					<li><a href="Contact.html">Contact</a></li>
+					<li><a href="Interests.html">Intrests</a></li>
 				</ul>
 			</div>
 		</div>
