--- a/Artifacts.html
+++ b/Artifacts.html
@@ -42,7 +42,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="About.html">About</a></li>
-					<li><a href="coursework.html">Classes</a></li>
+					<li><a href="Coursework.html">Classes</a></li>
 					<li><a href="Artifacts.html">Artifacts</a></li>
 					<li><a href="Module.html">modules</a></li>
 					<li><a href="Contact.html">Contact</a></li>
