--- a/Contact.html
+++ b/Contact.html
@@ -53,9 +53,15 @@
 		</div>
 		<div id="content">
 			<div id="feature">
-				<p>Feature
+				<p>Form
 					
-<h2>Contact.</h2>
+<form>
+	What is your Name? <input type="text" name="name"/>
+	<br/>
+	 Email <input type="email" name="email"/>
+	</br>
+	<input type="submit" name="submit" value="Submit"/>
+	</form>
 				</p>
 			</div>
 			<div class="article column1">
