--- a/Contact.html
+++ b/Contact.html
@@ -59,7 +59,9 @@
 	What is your Name? <input type="text" name="name"/>
 	<br/>
 	 Email <input type="email" name="email"/>
-	</br>
+	<br/>
+	Comment <input type="comment" name="comment"/>
+				
 	<input type="submit" name="submit" value="Submit"/>
 	</form>
 				</p>
