--- a/Contact.html
+++ b/Contact.html
@@ -61,8 +61,8 @@
 	 Email <input type="email" name="email"/>
 	<br/>
 	Comment <input type="comment" name="comment"/>
-				
-	<input type="submit" name="submit" value="Submit"/>
+	<br/>			
+	<input type="submit" name="submit" value="thanks.html"/>
 	</form>
 				</p>
 			</div>
