--- a/Contact.html
+++ b/Contact.html
@@ -55,14 +55,16 @@
 			<div id="feature">
 				<p>Form
 					
-<form>
+<form action="thanks.html" method="get"
+name="myContact">
+	
 	What is your Name? <input type="text" name="name"/>
 	<br/>
 	 Email <input type="email" name="email"/>
 	<br/>
 	Comment <input type="comment" name="comment"/>
 	<br/>			
-	<input type="submit" name="submit" value="thanks.html"/>
+	<input type="submit" name="submit" value="submit"/>
 	</form>
 				</p>
 			</div>
