--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang=en>
 	<head>
 		<title>Liquid Layout</title>
 		<style type="text/css">
@@ -53,10 +53,9 @@
 		</div>
 		<div id="content">
 			<div id="feature">
-				<p>Feature
+				<p>Feature</p>
 					
 <h2>Welcome to my website, here I will describe myself as well as what classes I take, and my interests.</h2>
-				</p>
 			</div>
 			<div class="article column1">
 				<p>Column One</p>
